infra/k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth
  namespace: default
  labels:
    app:  auth
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app:  auth
    spec:
      containers:
      - name:  auth
        image:  hadesgod/auth
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 100Mi
        #   limits:
        #     cpu: 100m
        #     memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 4000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 4000
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  4000
          name:  auth
      restartPolicy: Always


---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: default
spec:
  selector:
    app: auth
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: auth
    protocol: TCP
    port: 80
    targetPort: 4000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort: 3000
