infra/k8s/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: default
  labels:
    app: nats
spec:
  selector:
    matchLabels:
      app: nats
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nats
    spec:
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      containers:
        - name: nats
          image: nats
          args:
            [
              "-p",
              "4222",
              "-m",
              "8222",
              "-js"
            ]
          # resources:
          #   requests:
          #     cpu: 100m
          #     memory: 100Mi
          #   limits:
          #     cpu: 100m
          #     memory: 100Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: default
spec:
  selector:
    app: nats
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
