infra/k8s/payments-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongo
  namespace: default
  labels:
    app: payments-mongo
spec:
  selector:
    matchLabels:
      app: payments-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: payments-mongo
    spec:
      containers:
        - name: payments-mongo
          image: mongo
          ports:
            - containerPort: 80
              name: payments-mongo
---
apiVersion: v1
kind: Service
metadata:
  name: payments-mongo
  namespace: default
spec:
  selector:
    app: payments-mongo
  type: ClusterIP
  ports:
    - name: payments-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
