infra/k8s/tickets-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo
  namespace: default
  labels:
    app: tickets-mongo
spec:
  selector:
    matchLabels:
      app: tickets-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      containers:
        - name: tickets-mongo
          image: mongo
          ports:
            - containerPort: 80
              name: tickets-mongo
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo
  namespace: default
spec:
  selector:
    app: tickets-mongo
  type: ClusterIP
  ports:
    - name: tickets-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
      # If you set the `spec.type` field to `NodePort` and you want a specific port number,
      # you can specify a value in the `spec.ports[*].nodePort` field.
