infra/k8s/tickets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets
  namespace: default
  labels:
    app: tickets
spec:
  selector:
    matchLabels:
      app: tickets
  replicas: 1
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: hadesgod/tickets
          # resources:
          #   requests:
          #     cpu: 100m
          #     memory: 100Mi
          #   limits:
          #     cpu: 100m
          #     memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 3000
              name: tickets
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: tickets
  namespace: default
spec:
  selector:
    app: tickets
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: tickets
      protocol: TCP
      port: 80
      targetPort: 4000
      # If you set the `spec.type` field to `NodePort` and you want a specific port number,
      # you can specify a value in the `spec.ports[*].nodePort` field.
      # nodePort: 3000
