infra/k8s/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticket-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: app.rustaship.cloudns.ph
      # - host: hadesgod.com
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 80
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              service:
                name: tickets
                port:
                  number: 80
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 80
          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payments
                port:
                  number: 80
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
